[gd_scene load_steps=40 format=3 uid="uid://d21qi3n3bfnnh"]

[ext_resource type="Texture2D" uid="uid://b2nu3pdep7iqp" path="res://Imagenes/carcasaVacia.png" id="1_ki733"]
[ext_resource type="Script" path="res://Main.gd" id="1_xkijb"]
[ext_resource type="Texture2D" uid="uid://ofkihagb7xuc" path="res://Imagenes/Teclado1/T01t01tipo.png" id="2_kf28h"]
[ext_resource type="Texture2D" uid="uid://c0ooadrtepk1f" path="res://Imagenes/Teclado1/T01t02tipo.png" id="3_fo5wt"]
[ext_resource type="Texture2D" uid="uid://bqyhbpjp87jde" path="res://Imagenes/Teclado1/T01t03tipo.png" id="4_e30fm"]
[ext_resource type="Texture2D" uid="uid://doph5n0ckgwku" path="res://Imagenes/Teclado1/T01t04tipo.png" id="5_1fxn0"]
[ext_resource type="Texture2D" uid="uid://b2qmlomogwdrm" path="res://Imagenes/Teclado1/T01t05tipo.png" id="6_tqsiv"]
[ext_resource type="Texture2D" uid="uid://c61d0hrf3tmvi" path="res://Imagenes/Teclado1/T01t06tipo.png" id="7_4pt3h"]
[ext_resource type="AudioStream" uid="uid://b8ftmifbhplyc" path="res://Sonidos/teclado-mac1.ogg" id="7_5awho"]
[ext_resource type="Texture2D" uid="uid://cbtth2ojulcre" path="res://Imagenes/Teclado1/T01t07tipo.png" id="8_gkrgo"]
[ext_resource type="Texture2D" uid="uid://c3kithshnvy5p" path="res://Imagenes/Teclado1/T01t08tipo.png" id="9_sswk2"]
[ext_resource type="Texture2D" uid="uid://c3b7k3v3qsb40" path="res://Imagenes/Teclado1/T01t10tipo.png" id="10_axqoy"]
[ext_resource type="Texture2D" uid="uid://m1ikpkaq715x" path="res://Imagenes/Teclado1/T01t09tipo.png" id="11_1sufl"]
[ext_resource type="Texture2D" uid="uid://bfm2ybakufhuq" path="res://Imagenes/Teclado2/T02t01.png" id="12_tse4k"]
[ext_resource type="Texture2D" uid="uid://btbguddhdyngr" path="res://Imagenes/Teclado2/T02t02.png" id="13_b3qo7"]
[ext_resource type="Texture2D" uid="uid://s41orfhkgu18" path="res://Imagenes/Teclado2/T02t03.png" id="14_w86si"]
[ext_resource type="Texture2D" uid="uid://cvpkcps5b6jjs" path="res://Imagenes/Teclado2/T02t04.png" id="15_hwty3"]
[ext_resource type="Texture2D" uid="uid://doc4k12o7ie3r" path="res://Imagenes/Teclado2/T02t05.png" id="16_on50d"]
[ext_resource type="Texture2D" uid="uid://pvqepq1wmr12" path="res://Imagenes/Teclado2/T02t06.png" id="17_drjp3"]
[ext_resource type="Texture2D" uid="uid://c3rcxcmi4ese8" path="res://Imagenes/Teclado2/T02t07.png" id="18_8vtho"]
[ext_resource type="Texture2D" uid="uid://ebv2yxli8bhp" path="res://Imagenes/Teclado2/T02t08.png" id="19_pe6of"]
[ext_resource type="Texture2D" uid="uid://cm5o0v0tptym3" path="res://Imagenes/Teclado2/T02t09.png" id="20_4omju"]
[ext_resource type="Texture2D" uid="uid://be7483appc4dh" path="res://Imagenes/Teclado2/T02t10.png" id="21_2l84d"]
[ext_resource type="Texture2D" uid="uid://bdrm3vyo1frd2" path="res://Imagenes/Teclado2/T02t11.png" id="22_tgqmi"]
[ext_resource type="Texture2D" uid="uid://e03i1rtnm05u" path="res://Imagenes/Teclado2/T02t12.png" id="23_rwt7x"]
[ext_resource type="Texture2D" uid="uid://c4chh2c0incbk" path="res://Imagenes/Teclado3/T3t01.png" id="24_afi70"]
[ext_resource type="Texture2D" uid="uid://g8bwbis5ypff" path="res://Imagenes/Teclado3/T3t02.png" id="25_4nsy7"]
[ext_resource type="Texture2D" uid="uid://l13o8hugjvg4" path="res://Imagenes/Teclado3/T3t03.png" id="26_ir52o"]
[ext_resource type="Texture2D" uid="uid://d34af30xlhblb" path="res://Imagenes/Teclado3/T3t04.png" id="27_24omy"]
[ext_resource type="Texture2D" uid="uid://do52l5xot7mph" path="res://Imagenes/Teclado3/T3t05.png" id="28_vg3gi"]
[ext_resource type="Texture2D" uid="uid://dhefc72dlhhle" path="res://Imagenes/Teclado3/T3t06.png" id="29_h2c8a"]
[ext_resource type="Texture2D" uid="uid://bdy7gtr7gi2hk" path="res://Imagenes/Teclado3/T3t07.png" id="30_r8vru"]
[ext_resource type="Texture2D" uid="uid://c66wd0uvqgls" path="res://Imagenes/Teclado3/T3t08.png" id="31_bf88w"]
[ext_resource type="Texture2D" uid="uid://btfjue8uf43gs" path="res://Imagenes/Teclado3/T3t09.png" id="32_8j1mc"]
[ext_resource type="Texture2D" uid="uid://1sh6aak8gwef" path="res://Imagenes/Teclado3/T3t10.png" id="33_s7fle"]
[ext_resource type="AudioStream" uid="uid://blctlbk7d8n7h" path="res://Sonidos/ChaChing.ogg" id="36_3j50v"]
[ext_resource type="AudioStream" uid="uid://d1o5iisl3npn4" path="res://Sonidos/dellBooting.ogg" id="37_1t2q4"]
[ext_resource type="AudioStream" uid="uid://cm6xg1ph1ebyu" path="res://Sonidos/arranque1.ogg" id="38_agsy7"]
[ext_resource type="AudioStream" uid="uid://cukj6kgvoty5c" path="res://Sonidos/beeeep.ogg" id="39_0bvm4"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(976, 1120)
layout_mode = 3
anchors_preset = 0
offset_right = 976.0
offset_bottom = 1120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkijb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 87.0
offset_top = 642.0
offset_right = 928.0
offset_bottom = 1051.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(980, 1119)
layout_mode = 0
offset_right = 980.0
offset_bottom = 1119.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
custom_minimum_size = Vector2(974, 1120)
layout_mode = 2
texture = ExtResource("1_ki733")

[node name="ButtonOneCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 136.0
offset_top = 744.0
offset_right = 210.0
offset_bottom = 814.0
rotation = -0.00872665
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_kf28h")
stretch_mode = 0

[node name="ButtonTwoCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 209.0
offset_top = 743.0
offset_right = 291.0
offset_bottom = 814.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_fo5wt")

[node name="ButtonFiveCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 279.0
offset_top = 742.0
offset_right = 361.0
offset_bottom = 814.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("4_e30fm")

[node name="ButtonTenCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 134.0
offset_top = 814.0
offset_right = 216.0
offset_bottom = 886.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_1fxn0")

[node name="ButtonTwentyCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 207.0
offset_top = 813.0
offset_right = 289.0
offset_bottom = 885.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_tqsiv")

[node name="ButtonFiftyCent" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 276.0
offset_top = 812.0
offset_right = 358.0
offset_bottom = 884.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("7_4pt3h")

[node name="ButtonOneEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 132.0
offset_top = 885.0
offset_right = 214.0
offset_bottom = 959.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("8_gkrgo")

[node name="ButtonTwoEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 206.0
offset_top = 885.0
offset_right = 288.0
offset_bottom = 959.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("9_sswk2")

[node name="ButtonSmileEmoji" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 130.0
offset_top = 956.0
offset_right = 274.0
offset_bottom = 1036.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("10_axqoy")

[node name="ButtonSmileCharacter" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 273.0
offset_top = 883.0
offset_right = 348.0
offset_bottom = 1027.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("11_1sufl")

[node name="ButtonSevenNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 400.0
offset_top = 741.0
offset_right = 482.0
offset_bottom = 815.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("12_tse4k")

[node name="ButtonEightNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 469.0
offset_top = 741.0
offset_right = 551.0
offset_bottom = 815.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("13_b3qo7")

[node name="ButtonNineNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 538.0
offset_top = 742.0
offset_right = 620.0
offset_bottom = 816.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("14_w86si")

[node name="ButtonFourNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 396.0
offset_top = 810.0
offset_right = 478.0
offset_bottom = 884.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("15_hwty3")

[node name="ButtonFiveNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 467.0
offset_top = 811.0
offset_right = 549.0
offset_bottom = 885.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("16_on50d")

[node name="ButtonSixNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 535.0
offset_top = 812.0
offset_right = 617.0
offset_bottom = 886.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("17_drjp3")

[node name="ButtonOneNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 394.0
offset_top = 880.0
offset_right = 476.0
offset_bottom = 954.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("18_8vtho")

[node name="ButtonTwoNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 465.0
offset_top = 881.0
offset_right = 547.0
offset_bottom = 955.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("19_pe6of")

[node name="ButtonThreeNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 534.0
offset_top = 882.0
offset_right = 616.0
offset_bottom = 956.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("20_4omju")

[node name="ButtonZeroNum" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 392.0
offset_top = 951.0
offset_right = 474.0
offset_bottom = 1025.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("21_2l84d")

[node name="ButtonClear" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 463.0
offset_top = 952.0
offset_right = 545.0
offset_bottom = 1026.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("22_tgqmi")

[node name="ButtonAcertijo" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 532.0
offset_top = 952.0
offset_right = 614.0
offset_bottom = 1026.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("23_rwt7x")

[node name="ButtonFiveEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 655.0
offset_top = 738.0
offset_right = 737.0
offset_bottom = 812.0
rotation = 0.00872665
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("24_afi70")

[node name="ButtonTenEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 723.0
offset_top = 738.0
offset_right = 805.0
offset_bottom = 812.0
rotation = 0.00872665
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("25_4nsy7")

[node name="ButtonTwentyEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 790.0
offset_top = 740.0
offset_right = 872.0
offset_bottom = 814.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("26_ir52o")

[node name="ButtonRed" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 655.0
offset_top = 806.0
offset_right = 737.0
offset_bottom = 880.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("27_24omy")

[node name="ButtonFiftyEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 722.0
offset_top = 807.0
offset_right = 804.0
offset_bottom = 881.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("28_vg3gi")

[node name="ButtonOneHunEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 790.0
offset_top = 807.0
offset_right = 872.0
offset_bottom = 881.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("29_h2c8a")

[node name="ButtonPlus" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 653.0
offset_top = 875.0
offset_right = 735.0
offset_bottom = 1019.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("30_r8vru")

[node name="ButtonTwoHunEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 722.0
offset_top = 877.0
offset_right = 804.0
offset_bottom = 951.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("31_bf88w")

[node name="ButtonFiveHunEuro" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 790.0
offset_top = 878.0
offset_right = 872.0
offset_bottom = 952.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("32_8j1mc")

[node name="ButtonDelete" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 723.0
offset_top = 944.0
offset_right = 860.0
offset_bottom = 1018.0
rotation = 0.0174533
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("33_s7fle")

[node name="Tecla" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5awho")
volume_db = 17.236

[node name="ChaChing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_3j50v")
volume_db = -13.352

[node name="InitMachine" type="AudioStreamPlayer" parent="."]
stream = ExtResource("37_1t2q4")
volume_db = -8.254

[node name="InitMachine2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("38_agsy7")
volume_db = -13.352

[node name="InitMachine3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_0bvm4")
volume_db = -13.352

[node name="Msg01" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 553.0
offset_right = 926.0
offset_bottom = 576.0

[node name="Msg02" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 573.0
offset_right = 564.0
offset_bottom = 596.0
text = "    "

[node name="Msg03" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 596.0
offset_right = 560.0
offset_bottom = 620.0

[connection signal="pressed" from="ButtonOneCent" to="." method="_on_button_one_cent_pressed"]
[connection signal="pressed" from="ButtonTwoCent" to="." method="_on_button_two_cent_pressed"]
[connection signal="pressed" from="ButtonFiveCent" to="." method="_on_button_five_cent_pressed"]
[connection signal="pressed" from="ButtonTenCent" to="." method="_on_button_ten_cent_pressed"]
[connection signal="pressed" from="ButtonTwentyCent" to="." method="_on_button_twenty_cent_pressed"]
[connection signal="pressed" from="ButtonFiftyCent" to="." method="_on_button_fifty_cent_pressed"]
[connection signal="pressed" from="ButtonOneEuro" to="." method="_on_button_one_euro_pressed"]
[connection signal="pressed" from="ButtonTwoEuro" to="." method="_on_button_two_euro_pressed"]
[connection signal="pressed" from="ButtonSevenNum" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="ButtonEightNum" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="ButtonNineNum" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="ButtonFourNum" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="ButtonFiveNum" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="ButtonSixNum" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="ButtonOneNum" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ButtonTwoNum" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ButtonThreeNum" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonZeroNum" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="ButtonClear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="ButtonFiveEuro" to="." method="_on_button_five_euro_pressed"]
[connection signal="pressed" from="ButtonTenEuro" to="." method="_on_button_ten_euro_pressed"]
[connection signal="pressed" from="ButtonTwentyEuro" to="." method="_on_button_twenty_euro_pressed"]
[connection signal="pressed" from="ButtonFiftyEuro" to="." method="_on_button_fifty_euro_pressed"]
[connection signal="pressed" from="ButtonOneHunEuro" to="." method="_on_button_one_hundred_euro_pressed"]
[connection signal="pressed" from="ButtonPlus" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="ButtonTwoHunEuro" to="." method="_on_button_two_hundred_euro_pressed"]
[connection signal="pressed" from="ButtonFiveHunEuro" to="." method="_on_button_five_hundred_euro_pressed"]
